# HRM-EEG

./: .gitignore  README.md  adaptive_computation_attention_processor.py  adaptive_computation_experiment.py  attention_bci_experiment.py  attention_bci_processed_experiment.py  attention_hierarchical_processor.py  attention_modules.py  attention_vs_non_attention_comparison.py  attention_vs_non_attention_head_to_head.py  config.py  debug_attention.py  download_all_datasets.py  download_bci_dataset.py  eeg_hierarchical_processor.py  explore_bci_data.py  hierarchical_eeg_progress.md  multi_channel_attention_experiment.py  multi_channel_attention_processor.py  pyproject.toml  requirements.txt  run_bci_experiment.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
archive/: eeg_sim.py  hrm_sim-demo.py  public-eeg-datasets.md
debug/: __init__.py  debug_attention_processed.py
notebooks/: 01_hierarchical_eeg_exploration.ipynb  0_setup.ipynb
results/: attention_vs_non_attention_results_20250801_181209.json  head_to_head_comparison_A05E_20250801_183344.json  head_to_head_comparison_A05E_20250801_183450.json  head_to_head_comparison_A05E_20250801_183540.json  head_to_head_comparison_A05E_20250801_183725.json
tests/: __init__.py  test_attention.py  test_organization.py
utils/: __init__.py  download_all_datasets.py
