[project]
name = "eeg-imagery"
version = "0.1.0"
description = "Toy hierarchical EEG imagery modeling with embodied priors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "scikit-learn",
  "numpy",
  "matplotlib",
  "joblib",
  "pydantic",
  "mne>=1.10.0",
  "einops>=0.8.1",
  "psutil>=7.0.0",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "tqdm>=4.67.1",
  "requests>=2.32.4",
  "seaborn>=0.13.2",
]
